# rust-gitconfig2json

./: .appveyor.yml  .conventional-changelog.context.js  .gitignore  .travis.yml  .yo-rc.json  Cargo.toml  changelog.md  git-config-list-null.txt  license-mit  package-lock.json  package.json  readme.md
src/: lib.rs
src/gitconfig/: map.rs  mod.rs  value.rs
